# target-postgres

./: .flake8  .gitignore  .pre-commit-config.yaml  LICENSE  README.md  compose.yml  docker-compose.yml  meltano.yml  podman.sh  pyproject.toml  tox.ini
.github/: dependabot.yml
.github/ISSUE_TEMPLATE/: bug.yml  feature.yml
.github/workflows/: ci_workflow.yml  constraints.txt  release_workflow.yml
performance/: 1m_rows_generate.py  README.md  native_import.sh  prep.sh  speed_compare.py  speed_compare.sh
scripts/performance/: .gitignore  1m_rows_generate.py  README.md  meltano.yml  prep.sh  progres_indicator.sh  speed_compare.py
scripts/performance/perf_tests/: pg_copy_upsert.sh  target_postgres_copy_branch.sh  target_postgres_copy_branch_no_validate.sh  target_postgres_current_branch.sh  target_postgres_current_branch_no_validate.sh
ssl/: cert.crt  pkey.key  root.crt  server.key
target_postgres/: __init__.py  __main__.py  connector.py  driver.py  sinks.py  target.py
target_postgres/tests/: __init__.py  conftest.py  core.py  test_core.py  test_sdk.py  test_standard_target.py  test_target_postgres.py  test_types.py
target_postgres/tests/data_files/: activate_version.singer  anyof.singer  array_boolean.singer  array_float_vector.singer  array_number.singer  array_string.singer  array_timestamp.singer  base16_content_encoding.singer  base16_content_encoding_interpreted.singer  base16_content_encoding_not_interpreted.singer  commits.singer  datatypes.singer  encoded_strings.singer  jsonb_data.singer  large_int.singer  large_numeric_primary_key.singer  missing_value.singer  multiple_schema_messages.singer  new_array_column.singer  object_mixed.singer  record_missing_required_property.singer  reserved_keywords.singer  storage_optimized_enum_off.singer  storage_optimized_enum_off_schema_update.singer  storage_optimized_enum_on.singer  storage_optimized_enum_on_schema_update.singer  tap_aapl.singer  tap_countries.singer  test_activate_version_deletes_data_properly.singer  test_activate_version_deletes_data_properly_2.singer  test_activate_version_doesnt_delete_before_populating.singer  test_activate_version_doesnt_delete_before_populating_2.singer  test_activate_version_hard.singer  test_activate_version_hard_no_metadata.singer  test_activate_version_soft.singer  test_activate_version_soft_no_metadata.singer  test_activate_version_soft_with_delete.singer  test_activate_version_uppercase_stream_name.singer  test_no_type.singer  uppercase_stream_name_with_column_alter.singer
target_postgres/tests/samples/: README.md
target_postgres/tests/samples/aapl/: __main__.py  aapl.py
target_postgres/tests/samples/aapl/data/: __init__.py
target_postgres/tests/samples/sample_tap_countries/: countries_streams.py  countries_tap.py
